tests/invalid/module_restore_wrong_param.wio
@ModuleRestoreState
fn RestoreState(snapshot: i64) -> i32 {
    return snapshot;
}

fn Entry() -> i32 {
    return 0;
}
